[gd_scene load_steps=6 format=3 uid="uid://u4i0cvq0bqej"]

[ext_resource type="Script" uid="uid://b6cn73yol3gpf" path="res://scenes/in_game_ui.gd" id="1_kplmn"]

[sub_resource type="Animation" id="Animation_kplmn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("menu_rect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_fnge6"]
resource_name = "menu_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("menu_rect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_a45jx"]
resource_name = "menu_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("menu_rect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a45jx"]
_data = {
&"RESET": SubResource("Animation_kplmn"),
&"menu_in": SubResource("Animation_a45jx"),
&"menu_out": SubResource("Animation_fnge6")
}

[node name="in_game_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kplmn")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.5
offset_top = -1.5
offset_right = 1.5
offset_bottom = 1.5
grow_horizontal = 2
grow_vertical = 2

[node name="tip_label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 25.0
offset_right = 20.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
horizontal_alignment = 1
vertical_alignment = 1

[node name="menu_player" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_a45jx")
}

[node name="menu_rect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Menu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.5
offset_right = 150.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="con_button" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="res_button" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "Restart
"

[node name="exit_button" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="win_menu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="win_menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="win_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.5
offset_right = 150.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="res_button" type="Button" parent="win_menu/VBoxContainer"]
layout_mode = 2
text = "Restart
"

[node name="exit_button" type="Button" parent="win_menu/VBoxContainer"]
layout_mode = 2
text = "Menu"

[node name="Label" type="Label" parent="win_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -217.0
offset_top = -195.0
offset_right = 217.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 76
text = "Well done"
uppercase = true

[node name="Label2" type="Label" parent="win_menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.5
offset_top = -96.0
offset_right = 196.5
offset_bottom = -66.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 21
text = "Your mental is better now. Keep move."

[connection signal="pressed" from="Menu/VBoxContainer/con_button" to="." method="_on_con_button_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/res_button" to="." method="_on_res_button_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="win_menu/VBoxContainer/res_button" to="." method="_on_res_button_pressed"]
[connection signal="pressed" from="win_menu/VBoxContainer/exit_button" to="." method="_on_exit_button_pressed"]
